Function1 -The Function problems could not solve are excepted.

--- a/.gitignore
+++ b/.gitignore
@@ -415,3 +415,5 @@ MigrationBackup/
 /C_Basic/Jungwol/632_선택제어문_자가진단9.c
 /C_Basic/128_반복제어문1_형성평가4.c
 /C_Basic/127_반복제어문1_형성평가3.c
+/C_Basic/533.c
+/C_Basic/551_1.c
