Function1-1 -unsloved problems last time -added problems (code. 576, 578)

--- a/C_Basic/C_Basic.vcxproj
+++ b/C_Basic/C_Basic.vcxproj
@@ -73,7 +73,9 @@
     <ClCompile Include="171_함수1_형성평가2.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="172_함수1_형성평가3.c" />
+    <ClCompile Include="172_함수1_형성평가3.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="173_함수1_형성평가4.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
@@ -125,7 +127,11 @@
     <ClCompile Include="574_함수1_자가진단4.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="576_함수1_자가진단6.c" />
     <ClCompile Include="577_함수1_자가진단7.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="578_함수1_자가진단8.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="634_ 반복제어문3_자가진단2.c">
