Loof control structure <3> -code no.140: output the sum and average. -code no.141: output the multiple.

--- a/.gitignore
+++ b/.gitignore
@@ -417,3 +417,6 @@ MigrationBackup/
 /C_Basic/127_반복제어문1_형성평가3.c
 /C_Basic/533.c
 /C_Basic/551_1.c
+/C_Basic/148_반복제어문3_형성평가9.c
+/C_Basic/144_반복제어문3_형성평가5.c
+/C_Basic/142_반복제어문3_형성평가3.c
