--- a/.gitignore
+++ b/.gitignore
@@ -420,3 +420,35 @@ MigrationBackup/
 /C_Basic/148_반복제어문3_형성평가9.c
 /C_Basic/144_반복제어문3_형성평가5.c
 /C_Basic/142_반복제어문3_형성평가3.c
+/C_Basic/Jungwol/127_반복제어문1_형성평가3.c
+/C_Basic/Jungwol/634.c
+/C_Basic/Jungwol/582_함수2_자가진단4.c
+/C_Basic/Jungwol/581_함수2_자가진단3.c
+/C_Basic/Jungwol/580_함수2_자가진단2.c
+/C_Basic/Jungwol/578_함수1_자가진단8.c
+/C_Basic/Jungwol/577_함수1_자가진단7.c
+/C_Basic/Jungwol/576_함수1_자가진단6.c
+/C_Basic/Jungwol/574_함수1_자가진단4.c
+/C_Basic/Jungwol/573_함수1_자가진단3.c
+/C_Basic/Jungwol/573.c
+/C_Basic/Jungwol/572_함수1_자가진단2.c
+/C_Basic/Jungwol/572.c
+/C_Basic/Jungwol/571_함수1_자가진단1.c
+/C_Basic/Jungwol/551_1.c
+/C_Basic/Jungwol/551.c
+/C_Basic/Jungwol/550.c
+/C_Basic/Jungwol/533.c
+/C_Basic/Jungwol/173_함수1_형성평가4.c
+/C_Basic/Jungwol/172_함수1_형성평가3.c
+/C_Basic/Jungwol/171_함수1_형성평가2.c
+/C_Basic/Jungwol/170_함수1_형성평가1.c
+/C_Basic/Jungwol/148_반복제어문3_형성평가9.c
+/C_Basic/Jungwol/148.c
+/C_Basic/Jungwol/144_반복제어문3_형성평가5.c
+/C_Basic/Jungwol/144.c
+/C_Basic/Jungwol/143_반복제어문3_형성평가4.c
+/C_Basic/Jungwol/142_반복제어문3_형성평가3.c
+/C_Basic/Jungwol/142.c
+/C_Basic/Jungwol/141_반복제어문3_형성평가2.c
+/C_Basic/Jungwol/140_반복제어문3_형성평가1.c
+/C_Basic/Jungwol/128_반복제어문1_형성평가4.c
