--- a/C_Basic/C_Basic.vcxproj.filters
+++ b/C_Basic/C_Basic.vcxproj.filters
@@ -87,37 +87,10 @@
     <ClCompile Include="Baekjun\2588_곱셈.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Baekjun\275_윤년.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="Baekjun\2884_알람시계.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Baekjun\9498_시험성적.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Jungwol\105 출력_형성평가5.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Jungwol\105_출력_형성평가5.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Jungwol\106 입력 형성평가1.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Jungwol\106_입력_형성평가1.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Jungwol\107 입력 형성평가2.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Jungwol\107_입력_형성평가2.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Jungwol\108 입력 형성평가3.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Jungwol\108_입력_형성평가3.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Jungwol\109 입력 형성평가4.c">
@@ -193,6 +166,39 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Jungwol\126_반복제어문1_형성평가2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\129_반복제어문1_형성평가5.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\130_반복제어문2_형성평가1.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\131_반복제어문2_형성평가2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\132_반복제어문2_형성평가3.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\133_반복제어문2_형성평가4.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\134_반복제어문2_형성평가5.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\135_반복제어문2_형성평가6.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\136_반복제어문2_형성평가7.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\137_반복제어문2_형성평가8.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\138_반복제어문2_형성평가9.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\139_반복제어문2_형성평가A.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Jungwol\513 입력_자가진단5.c">
@@ -306,10 +312,94 @@
     <ClCompile Include="Jungwol\540_반복제어문1_자가진단5.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Jungwol\541_반복제어문2_자가진단1.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\542_반복제어문2_자가진단2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\543_반복제어문2_자가진단3.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\544_반복제어문2_자가진단4.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\545_반복제어문2_자가진단5 .c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\546_반복제어문2_자가진단6.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\547_반복제어문2_자가진단7.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\548_반복재어문2_자가진단8.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\549_반복제어문3_자가진단1.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
     <ClCompile Include="Jungwol\632_선택제어문_자가진단9.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Jungwol\633_반복제어문1_자가진단6.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\634_ 반복제어문3_자가진단2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\105 출력_형성평가5.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\105_출력_형성평가5.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\106 입력 형성평가1.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\106_입력_형성평가1.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\107 입력 형성평가2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\107_입력_형성평가2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\108 입력 형성평가3.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Jungwol\108_입력_형성평가3.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="571_함수1_자가진단1.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="572.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="572_함수1_자가진단2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="573.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="573_함수1_자가진단3.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="574_함수1_자가진단4.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="576_함수1_자가진단6.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="577_함수1_자가진단7.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="578_함수1_자가진단8.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="580_함수2_자가진단2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="127_반복제어문1_형성평가3.c">
@@ -318,67 +408,46 @@
     <ClCompile Include="128_반복제어문1_형성평가4.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="129_반복제어문1_형성평가5.c">
+    <ClCompile Include="140_반복제어문3_형성평가1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="542_반복제어문2_자가진단2.c">
+    <ClCompile Include="141_반복제어문3_형성평가2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="543_반복제어문2_자가진단3.c">
+    <ClCompile Include="142.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="544_반복제어문2_자가진단4.c">
+    <ClCompile Include="142_반복제어문3_형성평가3.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Jungwol\545_반복제어문2_자가진단5 .c">
+    <ClCompile Include="143_반복제어문3_형성평가4.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="546_반복제어문2_자가진단6.c">
+    <ClCompile Include="144.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="547_반복제어문2_자가진단7.c">
+    <ClCompile Include="144_반복제어문3_형성평가5.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="130_반복제어문2_형성평가1.c">
+    <ClCompile Include="148.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="131_반복제어문2_형성평가2.c">
+    <ClCompile Include="148_반복제어문3_형성평가9.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="132_반복제어문2_형성평가3.c">
+    <ClCompile Include="170_함수1_형성평가1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="133_반복제어문2_형성평가4.c">
+    <ClCompile Include="171_함수1_형성평가2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="134_반복제어문2_형성평가5.c">
+    <ClCompile Include="172_함수1_형성평가3.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="135_반복제어문2_형성평가6.c">
+    <ClCompile Include="173_함수1_형성평가4.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="136_반복제어문2_형성평가7.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="541_반복제어문2_자가진단1.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="137_반복제어문2_형성평가8.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="138_반복제어문2_형성평가9.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="139_반복제어문2_형성평가A.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="548_반복재어문2_자가진단8.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="549_반복제어문3_자가진단1.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="634_ 반복제어문3_자가진단2.c">
+    <ClCompile Include="533.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="550.c">
@@ -390,67 +459,26 @@
     <ClCompile Include="551_1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="533.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="574_함수1_자가진단4.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="571_함수1_자가진단1.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="572_함수1_자가진단2.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="573_함수1_자가진단3.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="577_함수1_자가진단7.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="170_함수1_형성평가1.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="171_함수1_형성평가2.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="173_함수1_형성평가4.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="172_함수1_형성평가3.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="578_함수1_자가진단8.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="576_함수1_자가진단6.c">
+    <ClCompile Include="634.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="582_함수2_자가진단4.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="581_함수2_자가진단3.c">
+    <ClCompile Include="Jungwol\581_함수2_자가진단3.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="140_반복제어문3_형성평가1.c">
+    <ClCompile Include="555_배열1_자가진단1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="141_반복제어문3_형성평가2.c">
+    <ClCompile Include="556_배열1_자가진단2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="142_반복제어문3_형성평가3.c">
+    <ClCompile Include="557_배열1_자가진단3.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="144_반복제어문3_형성평가5.c">
+    <ClCompile Include="150_배열1_형성평가1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="148_반복제어문3_형성평가9.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="580_함수2_자가진단2.c">
-      <Filter>소스 파일</Filter>
-    </None>
   </ItemGroup>
 </Project>
