--- a/C_Basic/C_Basic.vcxproj.filters
+++ b/C_Basic/C_Basic.vcxproj.filters
@@ -480,5 +480,17 @@
     <ClCompile Include="150_배열1_형성평가1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="154_배열1_형성평가5.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="155_배열1_형성평가6.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="157_배열1_형성평가8.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="153_배열1_형성평가4.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
